--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,19 +1,7 @@
 .page {
-  min-height: 100px;
-  background: rgba(42, 44, 47, 1);
-  color: rgba(255, 255, 255, 1);
-  font-family: "Inter", "Sans-serif";
-  width: 100%;
-}
-@media screen and (max-width: 1000px) {
-  .page {
-    min-height: 1659px;
-    overflow: hidden;
-  }
-}
-
-@media screen and (max-width: 752px) {
-  .page {
-    min-height: 1550px;
-  }
+  background-color: #2a2c2f;
+  min-height: 100vh;
+  font-family: "Inter", sans-serif;
+  line-height: 1.63;
+  color: #fff;
 }
