Feito atualizações dos arquivos

--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -1,129 +1,84 @@
 .intro {
+  max-width: 984px;
+  margin: 0 auto;
+}
+
+.intro__title {
+  font-size: 54px;
+  line-height: 1.074;
+  max-width: 829px;
+  margin: 0;
+}
+
+.intro__quote {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  margin: 0 auto;
-  padding-right: 154px;
+  max-width: 738px;
+  margin-top: 40px;
 }
 
-/*Titulo*/
-.intro__title {
-  width: 830px;
-  height: 116px;
-  font-size: 54px;
-  font-weight: 900;
-  line-height: 58px;
-  padding-bottom: 40px;
-  margin-block: 0;
-}
-
-/*Frase*/
-.intro__text-phrase {
-  width: 738px;
-  height: 68px;
+.intro__quote-text {
   font-size: 24px;
-  font-weight: 400;
-  line-height: 34px;
-  padding-right: 92px;
+  margin: 0;
+  line-height: 1.4;
 }
 
-/*JOSEPH Beus*/
-.intro__text-reference {
-  width: 732px;
+.intro__quote-cite {
   font-size: 24px;
-  font-weight: 400;
-  line-height: 34px;
-  text-align: right;
-  padding-right: 98px;
-  margin-block: 0;
-  padding-top: 20px;
+  font-style: normal;
+  align-self: flex-end;
+  line-height: 1.4;
+  margin-top: 10px;
+}
+.intro__text {
+  max-width: 725px;
+  margin: 32px 0 0;
 }
 
-/*Descricao da cidade*/
-.intro__text-introduction {
-  width: 722px;
-  height: 182px;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 26.08px;
-  text-align: left;
-  padding-right: 108px;
-  margin-top: 32px;
-  margin-bottom: 92px;
-}
-
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1024px) {
   .intro {
-    padding-inline: 24px;
-    overflow: hidden;
+    max-width: 93.75vw;
+    margin: 0 auto;
+    padding: 0;
   }
 
   .intro__title {
-    width: auto;
-    padding: 0;
-    height: 98px;
     font-size: 45px;
-    line-height: 49px;
-    margin-bottom: 0;
   }
 
-  .intro__text-phrase {
-    width: auto;
-    padding-right: 0;
-    margin-bottom: 0;
-    line-height: 102px;
-    font-size: 24px;
-    line-height: 34px;
+  .intro__quote {
+    margin-top: 50px;
   }
 
-  .intro__text-reference {
-    width: auto;
-    text-align: end;
-    padding: 0;
-    height: 34px;
-    font-size: 24px;
-    margin-block: 0;
-    padding-top: 26px;
-  }
-
-  .intro__text-introduction {
-    width: auto;
-    padding: 0;
-    height: 182px;
-    margin-bottom: 88px;
-  }
-}
-
-@media screen and (max-width: 752px) {
-  .intro {
-    padding-inline: 16px;
-    width: auto;
-  }
-
-  .intro__title {
-    height: auto;
-    font-size: 32px;
-    line-height: 35px;
-    padding-right: 0;
-  }
-
-  .intro__text-phrase {
-    height: auto;
-    font-size: 24px;
-    line-height: 35px;
-    padding-top: 40px;
+  .intro__quote-cite {
     margin-top: 0;
   }
+}
 
-  .intro__text-reference {
-    height: auto;
-    line-height: 34px;
+@media screen and (max-width: 544px) {
+  .intro {
+    max-width: 90vw;
+    margin: 0 auto;
+    padding: 0;
   }
 
-  .intro__text-introduction {
-    height: auto;
-    margin-bottom: 64px;
-    font-size: 16px;
-    line-height: 26.08px;
+  .intro__title {
+    font-size: 32px;
+  }
+
+  .intro__quote {
+    margin-top: 40px;
+  }
+
+  .intro__quote-text {
+    line-height: 1.25;
+  }
+
+  .intro__quote-cite {
+    margin-top: 10px;
+  }
+
+  .intro__text {
+    margin-top: 32px;
   }
 }
