--- a/blocks/content.css
+++ b/blocks/content.css
@@ -1,6 +1,9 @@
 .content {
-  color: rgba(255, 255, 255, 1);
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
+  margin-bottom: 90px;
+}
+
+@media screen and (max-width: 544px) {
+  .content {
+    margin-bottom: 65px;
+  }
 }
