--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,21 +1,9 @@
 .footer {
-  display: flex;
-  justify-content: center;
+  padding: 0 0 25px;
 }
 
 .footer__copyright {
-  font-family: Inter;
   font-size: 14px;
-  font-weight: 400;
-  line-height: 16px;
-  text-align: right;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
-}
-
-@media screen and (max-width: 752px) {
-  .footer__copyright {
-    line-height: 14px;
-    margin-bottom: 24px;
-  }
+  text-align: center;
+  margin: 0;
 }
