--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,26 +1,81 @@
 .header {
-  margin: 0 auto;
-  text-align: center;
+  padding: 34px 0 92px;
 }
 
 .header__logo {
-  max-width: 254px;
-  padding-top: 34px;
-  padding-bottom: 90px;
+  display: block;
+  width: 254px;
+  margin: 0 auto;
 }
 
-@media screen and (max-width: 1000px) {
-  .header__logo {
-    padding-top: 30px;
-    height: 66px;
+.header__title {
+  font-size: 96px;
+  line-height: 1.05;
+  max-width: 720px;
+  text-align: center;
+  margin: 90px auto 0;
+}
+
+.header__subtitle {
+  font-size: 30px;
+  line-height: 1.2;
+  font-weight: normal;
+  margin: 32px auto 0;
+  max-width: 720px;
+  text-align: center;
+}
+
+.header__image {
+  display: block;
+  width: 100vw;
+  max-width: 984px;
+  margin: 64px auto 0;
+  filter: grayscale(100%);
+  box-shadow: 10px 10px 25px rgba(0, 0, 0, 0.5);
+}
+
+@media screen and (max-width: 1024px) {
+  .header {
+    padding: 30px 0 90px;
+  }
+
+  .header__title {
+    font-size: 75px;
+  }
+
+  .header__subtitle {
+    margin-top: 25px;
+  }
+
+  .header__image {
+    margin-top: 30px;
   }
 }
 
-@media screen and (max-width: 752px) {
+@media screen and (max-width: 544px) {
+  .header {
+    padding: 20px 0 64px;
+  }
+
   .header__logo {
-    padding-top: 20px;
-    padding-bottom: 50px;
-    max-width: 188px;
-    height: 52px;
+    width: 188px;
+  }
+
+  .header__title {
+    font-size: 40px;
+    max-width: 67.86vw;
+    line-height: 1.1;
+    margin-top: 50px;
+  }
+
+  .header__subtitle {
+    font-size: 16px;
+    max-width: 90vw;
+    line-height: 1.25;
+    margin-top: 16px;
+  }
+
+  .header__image {
+    margin-top: 40px;
   }
 }
