--- a/blocks/lead.css
+++ b/blocks/lead.css
@@ -1,78 +1,62 @@
-.lead {
-  max-width: 984px;
-  font-size: 30px;
-  font-weight: 400;
-  line-height: 1.5;
+.lead__title {
+  grid-area: title;
+  max-width: 460px;
+  font-size: 72px;
+  line-height: 1.055;
+  margin: 0;
+}
+
+.lead__container-paragraph {
+  grid-area: paragraph;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
+  max-width: 484px;
+  gap: 25px;
 }
 
-.lead__title {
-  max-width: 720px;
-  font-size: 96px;
-  font-weight: 900;
-  line-height: 100px;
-  text-align: center;
-  margin-top: 0;
-}
-
-.lead__subtitle {
-  max-width: 720px;
-  font-size: 30px;
-  font-weight: 400;
-  line-height: 36px;
-  text-align: center;
-  margin-bottom: 64px;
-  margin-top: 0;
+.lead__paragraph {
+  font-size: 18px;
+  height: fit-content;
+  margin: 0;
 }
 
 .lead__image {
-  max-width: 984px;
-  margin-bottom: 92px;
-  width: 100%;
-  display: block;
-  justify-content: center;
+  position: relative;
+  grid-area: image;
+  width: 460px;
+  box-shadow: 10px 10px 25px rgba(0, 0, 0, 0.5);
 }
 
-@media screen and (max-width: 1000px) {
-  .lead__title {
-    max-width: 530px;
-    font-size: 75px;
-    line-height: 79px;
-  }
-
-  .lead__subtitle {
-    max-width: 720px;
-    padding-bottom: 30px;
-    margin-bottom: 0;
-  }
-
+@media screen and (max-width: 1024px) {
   .lead__image {
-    margin-bottom: 90px;
-  }
-}
-@media screen and (max-width: 752px) {
-  .lead__title {
-    margin-inline: 16px;
-    max-width: 228px;
-    font-family: Inter;
-    font-size: 40px;
-    line-height: 44px;
-    text-align: center;
+    width: 44.272vw;
   }
 
-  .lead__subtitle {
-    max-width: 288px;
-    font-family: Inter;
+  .lead__title {
+    font-size: 42px;
+    width: 44.272vw;
+    line-height: 1.1;
+  }
+
+  .lead__paragraph {
     font-size: 16px;
-    line-height: 20px;
-    text-align: center;
-    padding-bottom: 40px;
   }
+}
+
+@media screen and (max-width: 544px) {
+  .lead__title {
+    font-size: 32px;
+    width: 90vw;
+    margin: 0;
+  }
+
+  .lead__paragraph {
+    width: 90vw;
+  }
+
   .lead__image {
-    margin-bottom: 64px;
+    width: 100%;
+    margin-right: 0;
+    box-shadow: none;
   }
 }
