--- a/pages/index.css
+++ b/pages/index.css
@@ -4,5 +4,7 @@
 @import url("../blocks/header.css");
 @import url("../blocks/content.css");
 @import url("../blocks/intro.css");
-@import url("../blocks/footer.css");
+@import url("../blocks/photo-grid.css");
+@import url("../blocks/leads.css");
 @import url("../blocks/lead.css");
+@import url("../blocks/footer.css");
